--- a/app/src/main/res/layout/activity_selected_item.xml
+++ b/app/src/main/res/layout/activity_selected_item.xml
@@ -8,6 +8,15 @@
     android:background="@color/black"
     android:gravity="center_vertical">
 
+
+    <ImageView
+        android:id="@+id/scanView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="5dp"/>
+
+
     <TextView
         android:id="@+id/text_result"
         android:layout_width="match_parent"
@@ -15,16 +24,27 @@
         android:layout_gravity="center_horizontal"
         android:textSize="16sp"
         android:textColor="@color/white"
-        android:padding="8dp" />
+        android:padding="8dp"
+        android:layout_marginBottom="5dp"/>
+
+    <TextView
+        android:id="@+id/text_result_type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textSize="16sp"
+        android:textColor="@color/white"
+        android:padding="8dp"
+        android:layout_marginBottom="5dp"/>
 
     <Button
         android:id="@+id/button_open"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/open"
-        android:layout_gravity="center_horizontal"
         android:textColor="#ffffff"
         android:background="@drawable/buttom_shape"
+        android:layout_gravity="center_horizontal"
         android:gravity="center"
         android:padding="12dp"
         android:layout_marginBottom="10dp"/>
@@ -34,8 +54,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/share"
-        android:textColor="#ffffff"
         android:layout_gravity="center_horizontal"
+        android:textColor="#ffffff"
         android:background="@drawable/buttom_shape"
         android:gravity="center"
         android:padding="12dp" />
