--- a/app/src/main/res/layout/activity_selected_item.xml
+++ b/app/src/main/res/layout/activity_selected_item.xml
@@ -18,27 +18,29 @@
 
 
     <TextView
-        android:id="@+id/text_result"
+        android:id="@+id/text_res"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:textSize="16sp"
         android:textColor="@color/white"
         android:padding="8dp"
-        android:layout_marginBottom="5dp"/>
+        android:layout_marginBottom="5dp"
+        android:gravity="center"/>
 
     <TextView
-        android:id="@+id/text_result_type"
+        android:id="@+id/text_resultType"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:textSize="16sp"
+        android:gravity="center"
         android:textColor="@color/white"
         android:padding="8dp"
         android:layout_marginBottom="5dp"/>
 
     <Button
-        android:id="@+id/button_open"
+        android:id="@+id/open"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/open"
@@ -50,7 +52,7 @@
         android:layout_marginBottom="10dp"/>
 
     <Button
-        android:id="@+id/button_share"
+        android:id="@+id/share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/share"
